--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "CL Blog RESTful API",
   "scripts": {
-    "test": "npm run test",
-    "build": "npm run lint && npx tsc",
-    "serve": "npm run build && node dist/app.js",
+    "test": "npx ts-mocha --paths -p tsconfig.json test/*.spec.ts",
+    "build": "rm -r dist/* && npm run lint && npx tsc",
+    "serve": "npm run build && node dist/src/app.js",
     "lint": "npx eslint ."
   },
   "repository": {
@@ -24,12 +24,24 @@
   },
   "homepage": "https://github.com/Victory/cl-blog-api#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/expect": "^24.3.0",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "chai": "^4.3.6",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
+    "ts-mocha": "^9.0.2",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.1",
+    "cross-fetch": "^3.1.5",
+    "express": "^4.17.2",
+    "striptags": "^3.2.0"
   }
 }
